--- a/main.html
+++ b/main.html
@@ -7,7 +7,23 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<article>
+		<p>first paragraph</p>
+		<p>hello world hello acciojob hello world hello acciojob 
+			hello world hello acciojob
+		</p>
+		<p>hello world hello acciojob hello world hello acciojob 
+			hello world hello acciojob
+		</p>
+	</article>
+
+	<ul>
+		<li>first item</li>
+		<li>second item</li>
+		<li>third item</li>
+		<li>fourth item</li>
+		<li>fifth item</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
